--- a/libtool-2.4.6/debian/control
+++ b/libtool-2.4.6/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 8.1.3~),
   autotools-dev,
   help2man,
   texinfo,
-  zlib1g-dev,
+  zlib1g-mingw-w64-dev,
   gnulib
 Build-Conflicts: automake1.9, gcj-jdk
 Section: devel
@@ -16,7 +16,7 @@ Maintainer: Kurt Roeckx <kurt@roeckx.be>
 Standards-Version: 3.9.6
 Homepage: http://www.gnu.org/software/libtool/
 
-Package: libtool
+Package: libtool-mingw-w64
 Architecture: all
 Multi-Arch: foreign
 Section: devel
@@ -37,11 +37,11 @@ Description: Generic library support script
  .
  Libtool supports generation of C, C++, Fortran and Java libraries.
 
-Package: libtool-bin
+Package: libtool-mingw-w64-bin
 Architecture: any
 Section: devel
-Depends: libtool (>= ${source:Version}), ${misc:Depends}
-Replaces: libtool (<< 2.4.2-1.8~)
+Depends: libtool-mingw-w64 (>= ${source:Version}), ${misc:Depends}
+Replaces: libtool-mingw-w64 (<< 2.4.2-1.8~)
 Description: Generic library support script (libtool binary)
  This is GNU libtool, a generic library support script.  Libtool hides
  the complexity of generating special library types (such as shared
@@ -54,11 +54,11 @@ Description: Generic library support script (libtool binary)
  .
  This package contains the libtool binary only.
 
-Package: libtool-doc
+Package: libtool-mingw-w64-doc
 Architecture: all
 Section: doc
 Depends: ${misc:Depends}
-Conflicts: libtool1.4-doc
+Conflicts: libtool1.4-mingw-w64-doc
 Description: Generic library support script
  This package contains the GNU libtool documentation.
  .
@@ -69,7 +69,7 @@ Description: Generic library support script
  or Makefile.am.  See the documentation for details.  Libtool supports
  building static libraries on all platforms.
 
-Package: libltdl7
+Package: libltdl7-mingw-w64
 Architecture: any
 Multi-Arch: same
 Section: libs
@@ -90,7 +90,7 @@ Description: System independent dlopen wrapper for GNU libtool
    * GNU DLD (emulates dynamic linking for static libraries)
    * libtool's dlpreopen
 
-Package: libltdl-dev
+Package: libltdl-mingw-w64-dev
 Architecture: any
 Multi-Arch: same
 Section: libdevel
@@ -99,7 +99,7 @@ Recommends: libtool
 Conflicts: libtool (<< 1.5.20), libtool1.4, libltdl3-dev, libltdl7-dev
 Replaces: libtool (<< 1.5.20), libltdl3-dev, libltdl7-dev
 Provides: libltdl3-dev, libltdl7-dev
-Depends: libltdl7 (= ${binary:Version}), ${misc:Depends}
+Depends: libltdl7-mingw-w64 (= ${binary:Version}), ${misc:Depends}
 Description: System independent dlopen wrapper for GNU libtool
  This package contains the header files and static libraries for the
  libltdl package.
