--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "libtiff"]
 	path = libtiff
 	url = git@github.com:mingw-deb/libtiff.git
+[submodule "libunistring"]
+	path = libunistring
+	url = git@github.com:mingw-deb/libunistring.git
